# framex-1

./: BUILD_GUIDE.md  CMakeLists.txt  GITHUB_GUIDE.md  LICENSE.txt  README.md
installer/: build_installer.bat  setup.iss
resources/: framex.rc
src/: history_manager.cpp  history_manager.h  hotkey_manager.cpp  hotkey_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  settings_manager.cpp  settings_manager.h  theme_manager.cpp  theme_manager.h
src/editor/: video_editor.cpp  video_editor.h
src/recording/: audio_capture.cpp  audio_capture.h  recorder.cpp  recorder.h  screen_capture.cpp  screen_capture.h  webcam_capture.cpp  webcam_capture.h
src/ui/: about_dialog.cpp  about_dialog.h  ai_page.cpp  ai_page.h  dashboard_page.cpp  dashboard_page.h  export_page.cpp  export_page.h  floating_widget.cpp  floating_widget.h  hotkeys_page.cpp  hotkeys_page.h  recording_settings_panel.cpp  recording_settings_panel.h  recordings_page.cpp  recordings_page.h  region_selector.cpp  region_selector.h  schedule_page.cpp  schedule_page.h  screenshots_page.cpp  screenshots_page.h  settings_page.cpp  settings_page.h  sidebar_widget.cpp  sidebar_widget.h  stats_bar.cpp  stats_bar.h  streaming_page.cpp  streaming_page.h  tools_page.cpp  tools_page.h  watermark_page.cpp  watermark_page.h
